🔧 Fix: Corrige erro de data na IA
✅ Correções implementadas:
- Prompt da IA melhorado para retornar data no formato YYYY-MM-DD
- Validação de data para converter 'hoje' para formato correto
- Script de debug para troubleshooting
- Guia de troubleshooting completo

🧪 Testes:
- ✅ Supabase funcionando
- ✅ OpenAI funcionando
- ✅ Processamento completo OK
- ✅ Despesa registrada com sucesso

🚀 Pronto para deploy no Railway!

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "seed:categories": "ts-node src/scripts/seed-categories.ts",
     "test:connection": "ts-node src/scripts/test-connection.ts",
     "test:server": "ts-node src/scripts/test-server.ts",
-    "test:twilio": "ts-node src/scripts/test-twilio.ts"
+    "test:twilio": "ts-node src/scripts/test-twilio.ts",
+    "debug:integration": "ts-node src/scripts/debug-integration.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
