🧠 Feat: IA Avançada e Consultas Inteligentes
✅ Novas funcionalidades implementadas:
- AIAdvancedService: Análise inteligente de intenções
- SmartQueryService: Consultas inteligentes com insights
- Processamento de perguntas naturais
- Relatórios inteligentes com análise de padrões
- Suporte a períodos: hoje, semana, mês, ano
- Insights automáticos sobre gastos
- Respostas conversacionais naturais

🎯 Capacidades da IA:
- Entende perguntas como 'quanto gastei hoje'
- Processa 'qual minha maior despesa'
- Gera relatórios por categoria
- Fornece insights sobre padrões de gastos
- Respostas naturais e conversacionais

🚀 MeuBolso.AI agora é verdadeiramente inteligente!

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:connection": "ts-node src/scripts/test-connection.ts",
     "test:server": "ts-node src/scripts/test-server.ts",
     "test:twilio": "ts-node src/scripts/test-twilio.ts",
-    "debug:integration": "ts-node src/scripts/debug-integration.ts"
+    "debug:integration": "ts-node src/scripts/debug-integration.ts",
+    "test:advanced-ai": "ts-node src/scripts/test-advanced-ai.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
