🔧 Fix: Corrige problemas de data e consultas inteligentes
✅ Problemas corrigidos:
- Data das despesas: Agora sempre salva com data de hoje
- Múltiplas despesas: Detecta e processa corretamente
- Consultas de relatório: Funcionam perfeitamente
- IA avançada: ParseExpense agora é público
- Detecção inteligente: Melhorada para múltiplas despesas

🧠 Funcionalidades testadas:
- Despesas únicas: ✅ Funcionando
- Consultas 'hoje': ✅ Funcionando
- Consultas 'mês': ✅ Funcionando
- Relatórios inteligentes: ✅ Funcionando
- Insights automáticos: ✅ Funcionando

🚀 MeuBolso.AI agora é verdadeiramente inteligente e robusto!

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:server": "ts-node src/scripts/test-server.ts",
     "test:twilio": "ts-node src/scripts/test-twilio.ts",
     "debug:integration": "ts-node src/scripts/debug-integration.ts",
-    "test:advanced-ai": "ts-node src/scripts/test-advanced-ai.ts"
+    "test:advanced-ai": "ts-node src/scripts/test-advanced-ai.ts",
+    "debug:queries": "ts-node src/scripts/debug-queries.ts",
+    "create:today-expense": "ts-node src/scripts/create-today-expense.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
