🎯 Feat: IA Personalizada e Conversão de Moedas
✅ Novas funcionalidades implementadas:
- Respostas personalizadas com nome do usuário
- Formatação inteligente das mensagens
- Conversão automática USD → BRL (taxa 5.2)
- Insights mais sugestivos e humanos
- Emojis por categoria
- Relatórios mais detalhados

🧠 Melhorias na IA:
- 'Dhemes, você gastou R$ 517.43 hoje'
- Detalhamento por categoria com emojis
- Sugestões personalizadas baseadas nos gastos
- Formatação automática de descrições
- Correção de erros de digitação

💰 Conversão de moedas:
-  → R$ 260 (automático)
- 100 USD → R$ 520 (automático)
- Formatação inteligente das descrições

🚀 MeuBolso.AI agora é verdadeiramente humano e inteligente!

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "debug:integration": "ts-node src/scripts/debug-integration.ts",
     "test:advanced-ai": "ts-node src/scripts/test-advanced-ai.ts",
     "debug:queries": "ts-node src/scripts/debug-queries.ts",
-    "create:today-expense": "ts-node src/scripts/create-today-expense.ts"
+    "create:today-expense": "ts-node src/scripts/create-today-expense.ts",
+    "test:personalized-ai": "ts-node src/scripts/test-personalized-ai.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
